routesrv/testdata/zone-aware-traffic/all-zones-3-addr-updated.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: myapp-deployment
  name: myapp-service
spec:
  clusterIP: 10.3.190.1
  ports:
    - name: web
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: myapp
  type: ClusterIP
---
apiVersion: zalando.org/v1
kind: RouteGroup
metadata:
  labels:
    app: myapp
  name: myapp
spec:
  hosts:
  - example.org
  backends:
  - name: myapp
    type: service
    serviceName: myapp-service
    servicePort: 80
  defaultBackends:
  - backendName: myapp
---
apiVersion: v1
kind: EndpointSlice
metadata:
  labels:
    app: myapp-deployment
    kubernetes.io/service-name: myapp-service
  name: myapp-service-foo
  namespace: default
endpoints:
  - addresses:
    - 10.3.0.3
    zone: eu-central-1a
  - addresses:
    - 10.3.1.3
    zone: eu-central-1b
  - addresses:
    - 10.3.1.4
    zone: eu-central-1b
  - addresses:
    - 10.3.1.5
    zone: eu-central-1b
  - addresses:
    - 10.3.1.6
    zone: eu-central-1b
  - addresses:
    - 10.3.2.3
    zone: eu-central-1c
  - addresses:
    - 10.3.2.4
    zone: eu-central-1c
  - addresses:
    - 10.3.2.5
    zone: eu-central-1c
  - addresses:
    - 10.3.2.6
    zone: eu-central-1c
ports:
  - name: web
    port: 8080
    protocol: TCP
apiVersion: v1
