routesrv/testdata/zone-aware-traffic/all-zones-except-zone-a.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: myapp-deployment
  name: myapp-service
spec:
  clusterIP: 10.3.190.1
  ports:
    - name: web
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: myapp
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: myapp
  name: myapp-ingress
  namespace: default
spec:
  rules:
    - host: example.org
      http:
        paths:
          - backend:
              service:
                name: myapp-service
                port:
                  number: 80
            pathType: ImplementationSpecific
---
apiVersion: v1
kind: EndpointSlice
metadata:
  labels:
    app: myapp-deployment
    kubernetes.io/service-name: myapp-service
  name: myapp-service-foo
  namespace: default
endpoints:
  - addresses:
    - 10.3.1.3
    zone: eu-central-1b
  - addresses:
    - 10.3.1.4
    zone: eu-central-1b
  - addresses:
    - 10.3.1.5
    zone: eu-central-1b
  - addresses:
    - 10.3.2.3
    zone: eu-central-1c
  - addresses:
    - 10.3.2.4
    zone: eu-central-1c
  - addresses:
    - 10.3.2.5
    zone: eu-central-1c
ports:
  - name: web
    port: 8080
    protocol: TCP
apiVersion: v1
