routesrv/testdata/zone-aware-traffic/mixed-zone-application-with-no-endpoints-zone-a.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: app-all-zones
  name: svc-all-zones
spec:
  clusterIP: 10.3.190.1
  ports:
    - name: web
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: app-all-zones
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: app-no-zone-a
  name: svc-no-zone-a
spec:
  clusterIP: 10.3.190.2
  ports:
    - name: web
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: app-no-zone-a
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-all-zones
  namespace: default
spec:
  rules:
    - host: allzones.example.org
      http:
        paths:
          - backend:
              service:
                name: svc-all-zones
                port:
                  number: 80
            pathType: ImplementationSpecific
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-no-zone-a
  namespace: default
spec:
  rules:
    - host: noa.example.org
      http:
        paths:
          - backend:
              service:
                name: svc-no-zone-a
                port:
                  number: 80
            pathType: ImplementationSpecific
---
# svc-all-zones: 3 endpoints per zone — meets minEndpointsByZone in all zones
apiVersion: v1
kind: EndpointSlice
metadata:
  labels:
    kubernetes.io/service-name: svc-all-zones
  name: svc-all-zones-eps
  namespace: default
endpoints:
  - addresses:
    - 10.2.0.3
    zone: eu-central-1a
  - addresses:
    - 10.2.0.4
    zone: eu-central-1a
  - addresses:
    - 10.2.0.5
    zone: eu-central-1a
  - addresses:
    - 10.2.1.3
    zone: eu-central-1b
  - addresses:
    - 10.2.1.4
    zone: eu-central-1b
  - addresses:
    - 10.2.1.5
    zone: eu-central-1b
  - addresses:
    - 10.2.2.3
    zone: eu-central-1c
  - addresses:
    - 10.2.2.4
    zone: eu-central-1c
  - addresses:
    - 10.2.2.5
    zone: eu-central-1c
ports:
  - name: web
    port: 8080
    protocol: TCP
---
# svc-no-zone-a: 3 endpoints in zone-b and zone-c, but NONE in zone-a
apiVersion: v1
kind: EndpointSlice
metadata:
  labels:
    kubernetes.io/service-name: svc-no-zone-a
  name: svc-no-zone-a-eps
  namespace: default
endpoints:
  - addresses:
    - 10.2.3.3
    zone: eu-central-1b
  - addresses:
    - 10.2.3.4
    zone: eu-central-1b
  - addresses:
    - 10.2.3.5
    zone: eu-central-1b
  - addresses:
    - 10.2.4.3
    zone: eu-central-1c
  - addresses:
    - 10.2.4.4
    zone: eu-central-1c
  - addresses:
    - 10.2.4.5
    zone: eu-central-1c
ports:
  - name: web
    port: 8080
    protocol: TCP
